kubernetes/apps/default/dbackup/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dbackup
spec:
  parentRefs:
    - name: envoy-gateway-local
      namespace: network
      sectionName: https
  hostnames:
    - dbackup.lab.egenintres.se
  rules:
    - backendRefs:
        - name: dbackup
          port: 3000
